--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VÍDEO</title>
+    <title>Detrás la primer victoria</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <div class="título">
+        <h1>&#127894 Detrás de la primer victoria &#127894</h1>
+    </div>
+
+    <div>
+        <p>Hann y Luisa se conocieron cuando tenían 8 y 16 años. Ambas compartían el gusto por los videojuegos. Hann era bueno en los combates cuerpo a cuerpo; Luisa, a largas y medianas distancias. La fortaleza de una era la debilidad de la otra. Eran un dúo totalmente sincronizado, no importaba el juego. Luisa murió cuando Hann tenía 12; se había suicidado. Hann dejó los videojuegos por 4 años. Cuando los retomó, Hann se prometió tener la impecable puntería que Luisa tenía; quería mantener vivo el recuerdo de su mejor amiga y dúo en su vida. Buscó mentoría en sus amigos y pareja. Perdió tantas veces, pero un día, con la nuca punzándole, sucedió: su primera victoria en solitario en Fornite. Lu -pensó-, ganamos... Y sólo me tomó 8 años. Hann lloró mucho ese día. Había ganado, sí, pero Luisa no estaba ahí para celebrarlo. Sin embargo, Hann sintió un gran alivio. Miró la pantalla del computador y susurró: Lu, no importa el juego, ganaré por las dos. No volveré a... dejar lo que nos mantiene unidas.</p>
+    </div>
+
+    <div>
+        <video src="assets/la_primer_victoria.mp4" controls autoplay style="width: 1500px;"></video>
+    </div>
+    
+
+<script src="script.js"></script>
     
 </body>
 </html>
